Content sementic api & persistence
