# src/main/java/com/lingo/craft/adapters/inbound/sentiment/AccumulatedContentSentimentModelMapper.java
@@ -1,0 +1,13 @@
+package com.lingo.craft.adapters.inbound.sentiment;
+
+import com.lingo.craft.domain.sentiment.model.AccumulatedContentSentimentModel;
+import org.mapstruct.Mapper;
+import com.diabolocom.release.openapi.model.ContentSentimentResponse;
+
+@Mapper(componentModel = "spring")
+public interface AccumulatedContentSentimentModelMapper {
+
+    ContentSentimentResponse toContentSentimentResponse(
+            AccumulatedContentSentimentModel accumulatedContentSentimentModel
+    );
+}
